--- a/arartekomaps/templates/location.html
+++ b/arartekomaps/templates/location.html
@@ -7,7 +7,7 @@
 
 {% block extraheader %}
 
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyAWPp6H0Hd1SMtlIjxALbYxDo_Jk4vxAVc" async="" defer="defer" type="text/javascript"></script>
 <script type="text/javascript">
     function initialize() {
     var center = new google.maps.LatLng(43.0, -1.0);
@@ -20,13 +20,13 @@
     var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
     var infowindow = new google.maps.InfoWindow();
 
-    {% for place in p_places %}{% if place.lat %}    
+    {% for place in p_places %}{% if place.lat %}
         var center = new google.maps.LatLng({{place.lat}}, {{place.lon}});
         bounds.extend(center);
-        var image = '{{STATIC_URL}}icn/{{place.icon}}.png';        
+        var image = '{{STATIC_URL}}icn/{{place.icon}}.png';
         var contentString_{{forloop.counter}} = '<p><a href="{{ place.get_absolute_url }}">{{place.name}}</a><br />{{place.category}} -  {{ place.city }}</p><br /><div class="accessibility">';
         {% for key,value,vkey,vvalue in place.access_list %}
-        contentString_{{forloop.parentloop.counter}} += '<div class="access_term">{{key}}</div><div class="access_definition {{key}}_{{value}}" title="{{vkey}} {{vvalue}}"><span>{{vvalue}}</span></div>'; 
+        contentString_{{forloop.parentloop.counter}} += '<div class="access_term">{{key}}</div><div class="access_definition {{key}}_{{value}}" title="{{vkey}} {{vvalue}}"><span>{{vvalue}}</span></div>';
         {% endfor %}
         contentString_{{forloop.counter}} += '</div>';
         var marker_{{forloop.counter}} = new google.maps.Marker({
@@ -43,10 +43,10 @@
                 }
         );
         {% endif %}{% endfor %}
-    map.fitBounds(bounds) 
+    map.fitBounds(bounds)
     if(infowindow) {
       infowindow.close();
-    }    
+    }
 
   }
 </script>
@@ -117,13 +117,13 @@
         {% endfor %}
     </dl>
     </li>
-   {% endfor %}    
+   {% endfor %}
   </ul>
 
   {% if thispage.has_previous %}
  <a href="{{prev_url}}">{% trans "Previous" %}</a>
   {% endif %}
-  
+
   {% if thispage.has_next %}
  <a href="{{next_url}}">{% trans "Next" %}</a>
   {% endif %}
