--- a/arartekomaps/templates/place.html
+++ b/arartekomaps/templates/place.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/slimbox2.css" type="text/css" media="screen" />
 <script type="text/javascript" src="{{STATIC_URL}}js/jquery.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/slimbox2.js"></script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyAWPp6H0Hd1SMtlIjxALbYxDo_Jk4vxAVc" async="" defer="defer" type="text/javascript"></script>
 <script type="text/javascript">
     function initialize() {
     {% if place.lat %}
