--- a/arartekomaps/templates/locateme.html
+++ b/arartekomaps/templates/locateme.html
@@ -5,7 +5,7 @@
 {% block head_title %}Locate me{% endblock %}
 
 {% block extraheader %}
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyAWPp6H0Hd1SMtlIjxALbYxDo_Jk4vxAVc" async="" defer="defer" type="text/javascript"></script>
 <script type="text/javascript">
   var geocoder;
   var map;
@@ -20,23 +20,23 @@
     }
     map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
     marker = new google.maps.Marker({
-              map: map, 
+              map: map,
               position: latlng,
               draggable: true
           });
-             
+
     google.maps.event.addListener(marker, "dragend", function(event) {
         var latlon = marker.getPosition();
         document.getElementById("flat").value=latlon.lat();
         document.getElementById("flon").value=latlon.lng();
     });
-    
+
     google.maps.event.addListener(map, "click", function(event) {
-        var latlon = event.latLng;            
+        var latlon = event.latLng;
         document.getElementById("flat").value=latlon.lat();
         document.getElementById("flon").value=latlon.lng();
         marker.setPosition(latlon);
-        }); 
+        });
   }
 
   function codeAddress() {
@@ -45,7 +45,7 @@
       geocoder.geocode( { 'address': address}, function(results, status) {
         if (status == google.maps.GeocoderStatus.OK) {
           latlon = results[0].geometry.location;
-          map.setCenter(latlon); 
+          map.setCenter(latlon);
           map.setZoom(16);
           document.getElementById("flat").value=latlon.lat();
           document.getElementById("flon").value=latlon.lng();
@@ -72,7 +72,7 @@
   {% if place.address2 %} <br />{{ place.address2 }}{% endif %}
   </div>
   <span class="postal-code">{{ place.postalcode }}</span>-<span class="locality">{{ place.city }}</span>
-  
+
 </div>
 
 <input type="text" size="40" id="address" name="address" value="{{ place.address1|normaltxo }} {{ place.address2 }}, {{place.postalcode}}-{{ place.city }}, ES" />
@@ -87,7 +87,7 @@
 <input type="hidden" name="place_slug" value="{{ place.slug }}" />
 <input type="submit" value="Save" />
 </form>
- 
+
  </div>
 <!-- /content_data -->
 
@@ -98,5 +98,5 @@
 
 </div>
 <!-- /map_area -->
-   
+
 {% endblock %}
