--- a/arartekomaps/templates/places/edit_place.html
+++ b/arartekomaps/templates/places/edit_place.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block extraheader %}
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyAWPp6H0Hd1SMtlIjxALbYxDo_Jk4vxAVc" async="" defer="defer" type="text/javascript"></script>
 <script type="text/javascript">
   var geocoder;
   var map;
